--- a/package.json
+++ b/package.json
@@ -31,12 +31,11 @@
     "prettier:fix": "prettier --write .",
     "lint": "eslint . --ext .ts,.tsx --cache",
     "lint:fix": "npm run lint -- --fix",
-    "lint-staged": "lint-staged",
     "typecheck": "tsc --noEmit",
     "depcheck": "npx -y owasp-dependency-check --project uikit -o reports --cveStartYear 2015",
     "publish-dry": "lerna publish --no-push --registry \"http://localhost:4873/\"",
     "publish": "lerna publish",
-    "prepare": "npx husky install .config/husky",
+    "prepare": "husky install .config/husky",
     "lab:flow": "node scripts/flow-styles"
   },
   "devDependencies": {
@@ -56,7 +55,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@iconify-json/ph": "^1.2.1",
-    "@mdx-js/react": "^2.3.0",
+    "@mdx-js/react": "^3.1.0",
     "@mui/material": "^5.14.20",
     "@playwright/test": "^1.41.1",
     "@storybook/addon-a11y": "^8.4.1",
@@ -85,7 +84,6 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^2.0.4",
     "@vitest/ui": "^2.0.4",
-    "add": "^2.0.6",
     "arquero": "^5.3.0",
     "axe-playwright": "^2.0.1",
     "chromatic": "^11.8.0",
@@ -149,12 +147,6 @@
   "prettier": "@hitachivantara/uikit-config/prettier",
   "license-compliance": {
     "extends": "@hitachivantara/uikit-config/licenses"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
   },
   "lint-staged": {
     "*.{ts,tsx}": [
