--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -18,6 +18,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["src"],
+  "include": ["**/*"],
   "exclude": ["node_modules"]
 }
