--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -21,18 +21,15 @@
     "@hitachivantara/uikit-react-viz": "*",
     "@hitachivantara/uikit-styles": "*",
     "@mui/material": "^5.14.20",
+    "@phosphor-icons/react": "^2.1.7",
     "arquero": "^5.3.0",
     "clsx": "^2.0.0",
     "formik": "^2.4.5",
-    "i18next": "^22.5.1",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-http-backend": "^2.4.2",
     "json5": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-grid-layout": "^1.4.4",
-    "react-i18next": "^12.3.1",
     "react-router-dom": "^6.20.1",
     "reactflow": "^11.10.1",
     "swr": "^2.2.4",
