--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -32,6 +32,7 @@
     "csstype": "^3.1.3"
   },
   "devDependencies": {
+    "@emotion/serialize": "^1.3.1",
     "vite": "^5.1.0"
   },
   "files": [
