--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,21 @@
 {
   "parser": "@typescript-eslint/parser",
+  "root": true,
   "parserOptions": {
     "project": "./tsconfig.json",
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:import/recommended",
     "plugin:import/typescript",
-    "airbnb",
-    "airbnb/hooks",
-    "airbnb-typescript",
-    "plugin:react/jsx-runtime",
+    "plugin:jsx-a11y/recommended",
+    "plugin:react-hooks/recommended",
     "prettier"
   ],
-  "plugins": ["@typescript-eslint", "import", "ssr-friendly"],
+  "plugins": ["react"],
   "env": {
     "es2021": true,
     "browser": true,
@@ -22,17 +23,24 @@
   },
   "ignorePatterns": ["*.d.ts", "dist", "node_modules", "playwright.config.ts"],
   "rules": {
-    "arrow-body-style": "off",
-    "prefer-arrow-callback": "off",
+    // #region React
+    "react-hooks/exhaustive-deps": "error",
+    "jsx-a11y/no-autofocus": "off",
+
     "react/jsx-key": "error",
-    "react/prop-types": "off",
-    "react/no-unused-prop-types": "off",
-    "react/require-default-props": "off",
-    "react/jsx-props-no-spreading": "off",
+    "react/jsx-no-comment-textnodes": "error",
+    "react/jsx-no-duplicate-props": "error",
+    "react/jsx-no-target-blank": "error",
+    "react/no-children-prop": "error",
+    "react/no-danger-with-children": "error",
+    "react/no-deprecated": "error",
+    "react/no-find-dom-node": "error",
+    "react/no-render-return-value": "error",
+    "react/no-unescaped-entities": "error",
     "react/function-component-definition": [
       "error",
       {
-        "namedComponents": "arrow-function",
+        "namedComponents": ["arrow-function", "function-declaration"],
         "unnamedComponents": "arrow-function"
       }
     ],
@@ -49,7 +57,13 @@
         "allowNamespace": true
       }
     ],
-    "no-nested-ternary": "off",
+    // #endregion
+
+    // #region Imports
+    "import/namespace": "off",
+    "import/no-unresolved": "off",
+    // #endregion
+
     "no-restricted-imports": [
       "error",
       {
@@ -64,44 +78,42 @@
         }
       }
     ],
-    "no-plusplus": [
+
+    "no-restricted-syntax": [
       "error",
       {
-        "allowForLoopAfterthoughts": true
+        "selector": "ImportDeclaration[source.value='react'][specifiers.0.type='ImportDefaultSpecifier']",
+        "message": "Default React import not allowed"
       }
     ],
-    "import/prefer-default-export": "off",
-    "import/no-extraneous-dependencies": [
-      "error",
-      {
-        "devDependencies": [
-          "apps/**",
-          "docs/**",
-          "templates/**",
-          "packages/icons/**",
-          "**/*.config.ts",
-          "**/*.stories.ts?(x)",
-          "**/stories/*.ts?(x)",
-          "**/*.spec.ts?(x)",
-          "**/*.test.ts?(x)"
-        ]
-      }
-    ],
-    "import/no-cycle": "error",
-    "import/order": "off",
     // TODO: review this
-    "react/no-array-index-key": "off",
-    "no-restricted-syntax": "off", // loops are fine?
     "no-param-reassign": "off",
-    "consistent-return": "off"
+    "consistent-return": "off",
+    "@typescript-eslint/ban-types": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      { "ignoreRestSiblings": true }
+    ]
   },
   "overrides": [
     {
       // override for package source-code files
       "files": ["packages/*/src/**/*.ts?(x)"],
+      "excludedFiles": [
+        "*.stories.ts?(x)",
+        "*.spec.ts?(x)",
+        "*.test.ts?(x)",
+        "**/templates/**",
+        "**/stories/**"
+      ],
       "extends": ["plugin:ssr-friendly/recommended"],
       "rules": {
-        "no-restricted-imports": ["error", { "patterns": ["packages/**"] }]
+        "no-restricted-imports": ["error", { "patterns": ["packages/**"] }],
+        "react/display-name": "error",
+        "import/no-cycle": "error",
+        "import/no-extraneous-dependencies": "error"
       }
     },
     {
@@ -132,18 +144,14 @@
         "no-alert": "off",
         "no-console": "off",
         "no-multi-str": "off",
-        "import/no-duplicates": "off",
-        "import/no-extraneous-dependencies": "off"
-      }
-    },
-    {
-      "files": ["**/*.config.ts"],
-      "rules": {
-        "import/no-relative-packages": "off"
+        "import/no-duplicates": "off"
       }
     }
   ],
   "settings": {
+    "react": {
+      "version": "detect"
+    },
     "import/parsers": {
       "@typescript-eslint/parser": [".ts", ".tsx"]
     },
