chore(lint): disallow parent index import
improves performance (especially when pointing to root index.ts)
and avoids (expensive) circular imports

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -67,7 +67,8 @@
     "no-restricted-imports": [
       "error",
       {
-        "patterns": ["@hitachivantara/*/*"]
+        "patterns": ["@hitachivantara/*/*"],
+        "paths": ["..", "../.."]
       }
     ],
     "no-restricted-exports": [
