--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "paths": {
       ".storybook/*": ["./.storybook/*"],
-      "~/*": ["./apps/app/src/*"],
-      "@docs/*": ["./apps/docs/src/*"]
+      "~/*": ["./apps/app/src/*"]
     }
   },
   "include": [
