--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -34,12 +34,12 @@
   "peerDependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.12.2",
+    "@mui/material": "^5.16.14",
     "arquero": "^5.2.0",
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0"
   },
   "dependencies": {
     "@hitachivantara/uikit-react-utils": "^0.2.29",
