build: fix rollup types error
types rollup (vite-plugin-d-ts) is crashing for module: "preserve"

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -17,7 +17,8 @@
     // "noUncheckedIndexedAccess": true,
 
     /* Bundling options (vite monorepo) */
-    "module": "preserve",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "noEmit": true,
     "composite": true,
     "declaration": true,
