--- a/packages/uno-preset/package.json
+++ b/packages/uno-preset/package.json
@@ -31,17 +31,16 @@
     "prepublishOnly": "npm run build && npx clean-publish"
   },
   "peerDependencies": {
-    "@unocss/core": "^0.58.5",
-    "@unocss/preset-uno": "^0.58.5"
+    "@unocss/core": "^66.0.0",
+    "@unocss/preset-uno": "^66.0.0"
   },
   "dependencies": {
     "@hitachivantara/uikit-styles": "^5.44.1",
-    "@unocss/preset-rem-to-px": "^0.58.5",
-    "unocss-preset-theme": "^0.12.0"
+    "@unocss/preset-rem-to-px": "^66.0.0"
   },
   "devDependencies": {
-    "@unocss/preset-uno": "^0.58.5",
-    "vite": "^5.1.0"
+    "@unocss/preset-uno": "^66.0.0",
+    "vite": "^6.2.2"
   },
   "files": [
     "dist"
