--- a/packages/uno-preset/package.json
+++ b/packages/uno-preset/package.json
@@ -32,14 +32,14 @@
   },
   "peerDependencies": {
     "@unocss/core": "^66.0.0",
-    "@unocss/preset-uno": "^66.0.0"
+    "@unocss/preset-wind3": "^66.0.0"
   },
   "dependencies": {
     "@hitachivantara/uikit-styles": "^5.44.1",
     "@unocss/preset-rem-to-px": "^66.0.0"
   },
   "devDependencies": {
-    "@unocss/preset-uno": "^66.0.0",
+    "@unocss/preset-wind3": "^66.0.0",
     "vite": "^6.2.2"
   },
   "files": [
