--- a/packages/app-shell-vite-plugin/package.json
+++ b/packages/app-shell-vite-plugin/package.json
@@ -21,6 +21,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "clean": "npx rimraf dist package",
+    "prepare": "npm run build",
     "prepublishOnly": "npm run build && npx clean-publish"
   },
   "dependencies": {
