--- a/apps/default-app/package.json
+++ b/apps/default-app/package.json
@@ -20,12 +20,12 @@
     "@mui/material": "^7.0.2",
     "@types/react-table": "^7.7.14",
     "clsx": "^2.0.0",
-    "i18next": "^24.2.2",
+    "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
-    "react-i18next": "15.7.1",
+    "react-i18next": "^15.7.3",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
