--- a/packages/app-shell-services/package.json
+++ b/packages/app-shell-services/package.json
@@ -17,10 +17,9 @@
   "scripts": {
     "build": "npm run clean && vite build",
     "clean": "npx rimraf dist package",
-    "prepublishOnly": "npm run build && npx clean-publish"
-  },
-  "dependencies": {
-    "lodash-es": "^4.17.21"
+    "prepublishOnly": "npm run build && npx clean-publish",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "peerDependencies": {
     "react": "^18.2.0"
