--- a/packages/code-editor/package.json
+++ b/packages/code-editor/package.json
@@ -35,8 +35,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.16.14",
+    "monaco-editor": "^0.54.0",
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0"
+  },
+  "peerDependenciesMeta": {
+    "monaco-editor": {
+      "optional": true
+    }
   },
   "dependencies": {
     "@hitachivantara/uikit-react-utils": "^0.2.45",
@@ -51,6 +57,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "monaco-editor": "^0.54.0",
     "vite": "^7.1.1",
     "vitest": "^3.2.4"
   },
