--- a/packages/code-editor/package.json
+++ b/packages/code-editor/package.json
@@ -51,6 +51,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "monaco-editor": "^0.54.0",
     "vite": "^7.1.1",
     "vitest": "^3.2.4"
   },
