--- a/apps/default-app/tsconfig.json
+++ b/apps/default-app/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "compilerOptions": {
+    // this can't be upgraded because app-shell-config's ts-node loader overrides it
+    "moduleResolution": "Node"
+  }
 }
